# tinytile

./: .clang-format  .gitignore  LICENSE  bar.h  build.zig  config.h  example-start.sh  main.c  meson.build  popup_message.h  readme.md  start.sh  tinytile.fish
src/: main.c  main.zig  meson.build  popup_message.h
